WIP: Translated services page

--- a/public/locales/de/expert-services.json
+++ b/public/locales/de/expert-services.json
@@ -99,6 +99,7 @@
             "button": "Loslegen"
         }
     },
+    "button": "Loslegen",
     "sections": {
         "keyCapabilities": "Hauptfähigkeiten:",
         "useCases": "Anwendungsfälle:"
