--- a/public/locales/en/expert-services.json
+++ b/public/locales/en/expert-services.json
@@ -99,6 +99,7 @@
             "button": "Get Started"
         }
     },
+    "button": "Get Started",
     "sections": {
         "keyCapabilities": "Key Capabilities:",
         "useCases": "Use Cases:"
