--- a/public/locales/de/footer.json
+++ b/public/locales/de/footer.json
@@ -8,6 +8,7 @@
     },
     "services": {
         "title": "Dienstleistungen",
+        "ourServices": "Unsere Dienstleistungen",
         "generalData": "Allgemeine Datenannotation",
         "expertAnnotation": "Experten- und Spezialannotation"
     },
