--- a/public/locales/fr/footer.json
+++ b/public/locales/fr/footer.json
@@ -8,6 +8,7 @@
     },
     "services": {
         "title": "Services",
+        "ourServices": "Nos services",
         "generalData": "Annotation de données générales",
         "expertAnnotation": "Annotation experte et spécialisée"
     },
