Style adjustment, Indystries translated

--- a/public/locales/de/credentials.json
+++ b/public/locales/de/credentials.json
@@ -35,7 +35,21 @@
     },
     "industries": {
         "title": "Branchen, die wir bedienen",
-        "subtitle": "Wir arbeiten branchenübergreifend, um auf spezifische Branchenbedürfnisse zugeschnittene Datenlösungen zu liefern."
+        "subtitle": "Wir arbeiten branchenübergreifend, um auf spezifische Branchenbedürfnisse zugeschnittene Datenlösungen zu liefern.",
+        "list": {
+            "finance": "Finanzen",
+            "healthcare": "Medizin",
+            "ecommerce": "E-Commerce",
+            "software": "Software",
+            "automotive": "Automotive",
+            "manufacturing": "Fertigung",
+            "logistics": "Logistik",
+            "insurance": "Versicherung",
+            "legal": "Recht",
+            "realEstate": "Immobilien",
+            "education": "Bildung",
+            "energy": "Energie"
+        }
     },
     "cta": {
         "title": "Bereit, unsere nächste Erfolgsgeschichte zu werden?",
