--- a/public/locales/en/credentials.json
+++ b/public/locales/en/credentials.json
@@ -35,7 +35,21 @@
     },
     "industries": {
         "title": "Industries We Serve",
-        "subtitle": "We work across sectors to deliver data solutions tailored to specific industry needs."
+        "subtitle": "We work across sectors to deliver data solutions tailored to specific industry needs.",
+        "list": {
+            "finance": "Finance",
+            "healthcare": "Healthcare",
+            "ecommerce": "E-commerce",
+            "software": "Software",
+            "automotive": "Automotive",
+            "manufacturing": "Manufacturing",
+            "logistics": "Logistics",
+            "insurance": "Insurance",
+            "legal": "Legal",
+            "realEstate": "Real Estate",
+            "education": "Education",
+            "energy": "Energy"
+        }
     },
     "cta": {
         "title": "Ready to become our next success story?",
