--- a/public/locales/fr/credentials.json
+++ b/public/locales/fr/credentials.json
@@ -35,7 +35,21 @@
     },
     "industries": {
         "title": "Secteurs que nous servons",
-        "subtitle": "Nous travaillons dans tous les secteurs pour fournir des solutions de données adaptées aux besoins spécifiques de l'industrie."
+        "subtitle": "Nous travaillons dans tous les secteurs pour fournir des solutions de données adaptées aux besoins spécifiques de l'industrie.",
+        "list": {
+            "finance": "Finance",
+            "healthcare": "Santé",
+            "ecommerce": "E-commerce",
+            "software": "Logiciel",
+            "automotive": "Automobile",
+            "manufacturing": "Fabrication",
+            "logistics": "Logistique",
+            "insurance": "Assurance",
+            "legal": "Juridique",
+            "realEstate": "Immobilier",
+            "education": "Éducation",
+            "energy": "Énergie"
+        }
     },
     "cta": {
         "title": "Prêt à devenir notre prochaine success story ?",
