Style adjustment in the de version

--- a/public/locales/de/approach.json
+++ b/public/locales/de/approach.json
@@ -37,7 +37,7 @@
             }
         },
         "customDesign": {
-            "title": "Individuelle Annotationsgestaltung",
+            "title": "Individuelle Gestaltung",
             "subtitle": "Sobald die Ziele klar sind, entwerfen wir einen Annotations-Workflow, der sowohl die Komplexität der Aufgabe als auch die Struktur Ihrer Daten widerspiegelt.",
             "description": "",
             "actions": {
