--- a/public/locales/de/general-services.json
+++ b/public/locales/de/general-services.json
@@ -1,6 +1,6 @@
 {
     "hero": {
-        "title": "Allgemeine Datenannotationsdienste",
+        "title": "Allgemeine Annotation",
         "subtitle": "Datenannotation auf Unternehmensebene, unterstützt von unserem 1.000-köpfigen Team in Namibia. Kosteneffektive, hochwertige Annotation für alle Datentypen."
     },
     "overview": {
