WIP: Update Home page styling

--- a/public/locales/de/credentials.json
+++ b/public/locales/de/credentials.json
@@ -60,7 +60,7 @@
     "cases": {
         "adaire": {
             "project": "Projektmanagement-Datenmigration",
-            "description": "Manuelle Datenmigration für ein Softwareentwicklungsunternehmen, das auf ein neues Projektmanagement-Tool umsteigt.",
+            "description": "Wir stellten sicher, dass beim Umstieg auf ein neues Tool die Daten vollständig und korrekt übertragen wurden.",
             "who": "Adaire ist ein Softwareentwicklungsunternehmen mit Sitz in Namibia, das Kunden in Deutschland und der Schweiz bedient. Ihre Outsourcing-Dienstleistungen werden von einigen der größten privaten und öffentlichen Organisationen Europas genutzt.",
             "what": "Adaire wechselte zu einem neuen Projektmanagement-Tool und benötigte manuelle Datenmigrationsdienstleistungen, um Genauigkeit und korrekte Strukturierung im neuen Tool sicherzustellen.",
             "how": "Projektdaten einschließlich Eigentümer, Status, Kategorien, Label und anderen Feldern wurden von Azure DevOps heruntergeladen, in das richtige Format angepasst und dann manuell in Jira importiert.",
@@ -69,8 +69,8 @@
             "outcome": "Reibungslose Einführung ohne Datenverlust."
         },
         "ddd": {
-            "project": "Autonomes Fahren Annotation",
-            "description": "Annotation von Bildern für ein autonomes Fahrprojekt.",
+            "project": "Autonomes Fahren",
+            "description": "Bilder für KI-Systeme präzise aufbereitet, damit Fahrzeuge Objekte zuverlässig erkennen.",
             "who": "Digital Divine Data (DDD) ist ein spezialisiertes Datenannotationsunternehmen, das sich auf KI-Trainingsdatensätze konzentriert.",
             "what": "DDD arbeitete mit Label Ladder an der Annotation von Bildern für ein autonomes Fahrprojekt zusammen, das präzise Objekterkennung und Klassifizierung für Fahrzeug-KI-Systeme erforderte.",
             "how": "Unser Expertenannotationsteam lieferte detaillierte Beschriftung von Straßenszenen, Fahrzeugen, Fußgängern und Verkehrsinfrastruktur zur Unterstützung der Algorithmenentwicklung für autonomes Fahren.",
@@ -80,7 +80,7 @@
         },
         "ambulanzpartner": {
             "project": "Gesundheitsdatenverarbeitung",
-            "description": "Datenverarbeitung und Annotation für Gesundheitsanwendungen.",
+            "description": "Patientendaten bereinigt und strukturiert, um eine bessere Versorgung zu ermöglichen.",
             "who": "Ambulanzpartner bietet medizinische Notfalldienste und Gesundheitslösungen an.",
             "what": "Label Ladder unterstützte Ambulanzpartner bei der Verarbeitung und Annotation von Gesundheitsdaten zur Verbesserung der Patientenversorgung.",
             "how": "Unser Team gewährleistete hochwertige Annotationen und Datenverarbeitung, um den spezifischen Anforderungen von Gesundheitsanwendungen gerecht zu werden.",
@@ -89,8 +89,8 @@
             "outcome": "Zuverlässige Berichterstattung und bessere Entscheidungsfindung."
         },
         "impactTank": {
-            "project": "Daten-Pipeline-Einrichtung",
-            "description": "Entwurf und Implementierung einer Daten-Pipeline für ein Wildtierschutzprojekt.",
+            "project": "Umweltschutz",
+            "description": "Datenpipeline für Wildtier-Monitoring aufgebaut, damit Umwelteinflüsse in Echtzeit gemessen werden können.",
             "who": "Impact Tank ist ein namibisch-schweizerischer Impact-Venture-Builder, der sich auf soziale Wirkung durch datengetriebene Lösungen und Community-Entwicklung in Afrika konzentriert.",
             "what": "Impact Tank benötigte eine robuste Daten-Pipeline zur Unterstützung ihres Wildtierschutzprojekts, um effiziente Datenerfassung, -verarbeitung und -analyse für Umwelt-Impact-Monitoring zu ermöglichen.",
             "how": "Das Team von Label Ladder entwarf und implementierte eine umfassende Daten-Pipeline-Architektur für Wildtierschutzdaten, einschließlich automatisierter Datenaufnahme, Verarbeitungsworkflows und Analysefunktionen.",
